feat(admin): manage Categories (Update Category) (#14)
